feat : Check mismatch in Password and ConfirmPassword

--- a/onlineBookStoreClient/src/container/login/index.css
+++ b/onlineBookStoreClient/src/container/login/index.css
@@ -57,3 +57,14 @@ input {
   cursor: not-allowed;
   pointer-events: none;
 }
+
+.confirm-password-container {
+  position: relative;
+}
+
+.password-validation-icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
