--- a/onlineBookStoreClient/src/container/login/index.css
+++ b/onlineBookStoreClient/src/container/login/index.css
@@ -68,3 +68,22 @@ input {
   top: 50%;
   transform: translateY(-50%);
 }
+.success-message {
+  color: green;
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+
+.error-message {
+  color: red;
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+
+.info-message {
+  color: #555;
+  font-size: 12px;
+  margin-top: 5px;
+  text-align: left;
+  display: block;
+}
