--- a/onlineBookStoreClient/src/container/bookStore/index.css
+++ b/onlineBookStoreClient/src/container/bookStore/index.css
@@ -64,6 +64,26 @@
   color: #34495e;
 }
 
+.add-to-cart-btn {
+  padding: 2px 6px;
+  font-size: 15px;
+  background-color: #007bff;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.quantity-picker {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.book-actions {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
 .logout-btn {
    padding: 10px;
     font-size: 16px;
