--- a/onlineBookStoreClient/src/container/shoppingCart/index.css
+++ b/onlineBookStoreClient/src/container/shoppingCart/index.css
@@ -64,3 +64,40 @@ button {
     font-weight: bold;
     font-size: 18px;
 }
+
+.quantity-container {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.quantity-label {
+  margin-right: 10px;
+  font-size: 14px;
+}
+
+.quantity-picker-cart {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.quantity-btn {
+  width: 20px;
+  height: 25px;
+  font-size: 16px;
+  text-align: center;
+  border: 1px solid #ccc;
+  background-color: #f0f0f0;
+  cursor: pointer;
+  color: black;
+}
+
+.quantity-input {
+  width: 50px;
+  height: 25px;
+  text-align: center;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  font-size: 14px;
+}
