--- a/onlineBookStoreClient/src/container/shoppingCart/index.css
+++ b/onlineBookStoreClient/src/container/shoppingCart/index.css
@@ -101,3 +101,15 @@ button {
   background-color: #fff;
   font-size: 14px;
 }
+
+.quantity-btn:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.total-price {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  margin-left: 50px;
+}
