--- a/onlineBookStoreClient/src/container/shoppingCart/index.css
+++ b/onlineBookStoreClient/src/container/shoppingCart/index.css
@@ -113,3 +113,17 @@ button {
   color: #333;
   margin-left: 50px;
 }
+
+.remove-btn-container {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.remove-btn {
+  background: none;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  color: #ff0000;
+}
