--- a/onlineBookStoreClient/src/container/shoppingCart/index.css
+++ b/onlineBookStoreClient/src/container/shoppingCart/index.css
@@ -46,7 +46,7 @@ button {
   padding: 5px 8px;
   border: none;
   cursor: pointer;
-  font-size: 0.9em;
+  font-size: 20px;
   border-radius: 4px;
 }
 
@@ -127,3 +127,39 @@ button {
   cursor: pointer;
   color: #ff0000;
 }
+
+.checkout-section {
+  width: 30%;
+  padding: 30px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  text-align: center;
+   position: absolute;
+   left: 600px;
+   top: 200px;
+}
+
+.checkout-section h2 {
+  margin-bottom: 20px;
+}
+
+.checkout-section p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.continue-shopping-div {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0;
+  text-align: center;
+}
+.checkout-button, .continue-shopping {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 10px 30px;
+  font-size: 15px;
+}
+
+
